# clothinkai

./: .env.example  .gitignore  README.md  docker-compose.yml  final.xlsx  开发文档-服装电商运营管理系统.md  指标字典.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/init/: 001_create_roles.sql
backend/alembic/versions/: 001_u01_initial_schema.py  002_u01_enable_rls.py  003_u01_seed_initial_data.py  004_u02_create_product_tables.py  005_u03_create_blogger_table.py  006_u04_create_promotion_tables.py  007_u05_create_settlement_tables.py  008_u05_backfill_settlements.py  009_u05_seed_smoke_test_data.py  010_u06a_create_import_tables.py  011_u07_create_wecom_tables.py  012_u09_seed_field_permissions.py  013_u10a_create_design_tables.py  014_u10b_create_platform_product.py  015_u11_add_audience_profile.py  016_u12_create_credential.py  017_u13_create_crawler_tables.py  018_u14_create_report_tables.py  019_u15_create_wecom_alert_tables.py  020_u16_order_adjustment_balance.py  021_u17_bundle_bi_export.py  022_u18_ai_advice_log.py  023_blogger_crawler_metrics.py  024_promotion_source_extra.py  025_grant_app_privileges.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  attachment.py  attachment_api.py  audit.py  cache.py  celery_app.py  config.py  db.py  errors.py  events.py  exceptions.py  logging.py  metrics.py  state_machine.py  tenancy.py
backend/app/modules/: __init__.py
backend/app/services/: __init__.py
backend/app/tasks/: __init__.py  backup_tasks.py  blogger_tasks.py  cleanup_tasks.py  crawler_tasks.py  import_tasks.py  report_tasks.py  wecom_tasks.py
backend/scripts/: restore_backup.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_advanced_report_api.py  test_ai_api.py  test_auth_api.py  test_blogger_api.py  test_blogger_tag_api.py  test_bundle_export_api.py  test_crawler_api.py  test_credential_api.py  test_design_api.py  test_health.py  test_import_api.py  test_order_adjustment_api.py  test_permission_api.py  test_platform_product_api.py  test_product_api.py  test_promotion_api.py  test_report_api.py  test_settlement_api.py  test_wecom_alert_api.py
backend/tests/integration/: test_advanced_reports.py  test_ai_advice.py  test_attachment_upload.py  test_audit_log.py  test_auth_login.py  test_auth_password.py  test_blogger_crud.py  test_blogger_recompute.py  test_blogger_search.py  test_blogger_upsert.py  test_brand_crud.py  test_bundle_bi_export.py  test_crawler_flow.py  test_credential_service.py  test_custom_permission.py  test_design_notification.py  test_design_workflow.py  test_e2e_review_to_paid.py  test_import_blogger.py  test_import_errors_download.py  test_import_field_mapping.py  test_import_promotion.py  (+34 more)
(+718 files in other folders)
